fixed z-index copyright, onSize, div type bugs

--- a/src/Ymage.scss
+++ b/src/Ymage.scss
@@ -12,7 +12,7 @@
         align-self: center;
         width:min(6rem, 50%);
         &.ymage-spinner {
-            animation: spinning 1.5s normal  infinite;
+            animation: spinning 1.5s normal infinite;
         }
     }
     img {
@@ -23,6 +23,7 @@
 		background-position: center;
 	}
     img, div {
+        position:relative;
         z-index:1;
         width:100%;
         height:100%;
@@ -37,6 +38,7 @@
     &.copyright::after {
         content:"©";
         position:absolute;
+        z-index:2;
         width:100%;
         height:100%;
         background:#000000a3;
